[package]
name = "git-clone-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.5"
dialoguer = "0.10.4"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1.28.1", features = ["full"] }

[dev-dependencies]
assert_fs = "1.0.12"
